--- a/src/app/shared/data-table/data-table.component.scss
+++ b/src/app/shared/data-table/data-table.component.scss
@@ -1,4 +1,8 @@
 @import '../../../styles.scss';
+$glass: rgba(255, 255, 255, 0.2);
+$glass-icon: rgba(255, 255, 255, 0.3);
+$gradient: linear-gradient(35deg, red, purple);
+$option: #320a28;
 
 .pricing-table {
     overflow-y: auto; /* make the table scrollable if height is more than 200 px  */
@@ -66,6 +70,12 @@
         &:first-child{
             text-align: left;
             width: 40%;
+            @media only screen and (max-width: $small) {
+                padding :0
+            }
+        }
+        @media only screen and (max-width: $small) {
+            padding: 10px;
         }
         i{
             padding-left: 20px
@@ -74,7 +84,7 @@
             width: 80%;
             display: inline-block;
             @media only screen and (max-width: $small) {
-                width: 70%;
+                width: 100%;
                 word-wrap: break-word;
             }
         }
@@ -86,7 +96,7 @@
             }
         }
         @media only screen and (max-width: $small) {
-            font-size: 18px;
+            font-size: 16px;
         }
     }
     .button{
@@ -129,6 +139,7 @@
             padding: 10px;
             color: $white;
             left: 30%;
+            z-index: 99;
 
         }
         .close-icon{
@@ -178,6 +189,10 @@
         transform: translateY(5px);
         display: inline-block;
         cursor: pointer;
+        @media only screen and (max-width: $small) {
+            width: 18px;
+            height: 19px;
+        }
       }
       
       input[type="radio"]:checked::before {
@@ -194,9 +209,110 @@
       }
     .currency{
         font-size: 18px;
+        @media only screen and (max-width: $small) {
+            font-size: 14px;
+        }
     }
     .currency-amount{
         font-size: 28px;
+        @media only screen and (max-width: $small) {
+            font-size: 16px;
+        }
+    }
+    @media only screen and (max-width: $small) {
+    /*mobile layout */
+
+        .card-body {
+            width: 100%;
+        }
+        .card-component {
+            border: none;
+            border-radius: 1rem;
+            transition: all 0.2s;
+            box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            margin: 20px;
+        }
+
+        h5.card-title , .card-price {
+            text-align: center;
+        }
+        .button-div{
+            text-align: center;
+            padding-bottom: 10px;
+        }
+        .dropdown-selected {
+            background: $coral;
+            width: 80%;
+            margin-top: 20px;
+            text-align: center;
+            margin: 0 auto;
+        }
+       /* <select> styles */
+select {
+    /* Reset */
+    appearance: none;
+    border: 0;
+    outline: 0;
+    font: inherit;
+    /* Personalize */
+    width: 100%;
+    height: 3em;
+    padding: 0 4em 0 1em;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg)
+        no-repeat right 0.8em center / 1.4em,
+      linear-gradient(to left, $glass-icon 3em, $glass 3em);
+    color: white;
+    border-radius: 0.25em;
+    box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    /* <option> colors */
+    option {
+      color: inherit;
+      background-color: $option;
+    }
+    /* Remove focus outline */
+    &:focus {
+      outline: none;
+    }
+    /* Remove IE arrow */
+    &::-ms-expand {
+      display: none;
+    }
+  }
+  
+
+        h5.card-title {
+            font-size: 20px;
+            margin-bottom: 0;
+            margin-top: 10px;
+        }
+
+        h6.card-price {
+            font-size: 18px;
+            margin: 20px 0;
+        }
+        .scope-name {
+            display: inline-block;
+            width: 230px;
+            font-size: 18px;
+            padding: 10px;
+            line-height: 24px;
+            text-align: center;
+        }
+        
+        .scope-info {
+            display: inline;
+            padding-left: 20px;
+        }
+        
+        ul.fa-ul {
+            margin-left: 20px;
+        }
+        .popup-panel{
+            left:0 !important
+        }
+/* Ends here */
     }
 }
 
